--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="./img/alurastart logo 2.png" alt="">
+        <img class="cabeçalho-imagem" src="./img/alurastart logo 2.png" alt="">
         <ul>
             <li>Escola</li>
             <li>Estudante</li>
